--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<link async rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-        <title>Modele</title>
+        <title>O'Chalet</title>
     </head>
     <body>
         <div id="root"></div>
